removing static files

--- a/app/view/partials/nav.ejs
+++ b/app/view/partials/nav.ejs
@@ -1,17 +1,21 @@
 <nav>
 	<select class="hide-disabled" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
-	    <option value="" disabled selected>Produção</option>
+	    <option value="" disabled selected>Catálogo</option>
 	    <option value="/product/manage">Gerir Produtos</option>
-	    <option value="/production/simulation">Simular Produção</option>
-	    <option value="/production">Solicitar Produção</option>
-	    <option value="/production/manage">Gerir Produções</option>
 	</select>
 
 	<select class="hide-disabled" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
-	    <option value="" disabled selected>Costura</option>
-	    <option value="/seam/manage">Gerir Costura</option>
-	    <option value="/seam/report">Fluxo de produção</option>
-	    <option value="/seam/internal">Costura Interna</option>
-	    <option value="/seam/external">Costura Externa</option>
+	    <option value="" disabled selected>Vendas</option>
+	    <option value="/seam/manage">Gerir Vendas</option>
+	</select>
+
+	<select class="hide-disabled" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
+	    <option value="" disabled selected>Vendas</option>
+	    <option value="/seam/manage">Gerir Vendas</option>
+	</select>
+
+	<select class="hide-disabled" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
+	    <option value="" disabled selected>Vendas</option>
+	    <option value="/seam/manage">Gerir Vendas</option>
 	</select>
 </nav>
