--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -12,7 +12,11 @@
         <% include ./partials/nav %>
 		<section>
 			<div class="container">
-                
+                <div class="box-1">
+                	<h3>Ainda não é representante J.A Rio Militar?</h3>
+                	<h3>Cadastre-se agora para se tornar um parceiro da marca militar que mais cresce no país.</h3><br>
+                	<button onclick="window.location.href='/signup'" class="btn-explicit bold">Desejo ser representante J.A Rio Militar</button>
+                </div>
 			</div>
 		</section>
 		<div id="ajax-loader" class="ajax-loader">
