--- a/app/view/partials/footer.ejs
+++ b/app/view/partials/footer.ejs
@@ -2,6 +2,10 @@
 <!-- <div class='copyright'>
     © J.A Rio Militar 2019 - All Rights Reserved | .
 </div> -->
-<script src="/javascripts/essentials/jquery-3.4.0.min.js"></script>
-<script src="/javascripts/essentials/lib.js"></script>
-<script src="/javascripts/essentials/api.js"></script>
+<!-- <script src="/javascripts/essentials/jquery-3.4.0.min.js"></script> -->
+<!-- <script src="/javascripts/essentials/jquery-3.4.0.min.js"></script> -->
+<!-- <script src="/javascripts/essentials/lib.js"></script> -->
+<!-- <script src="/javascripts/essentials/api.js"></script> -->
+
+<script src="http://erpjariomilitar.com/javascripts/essentials/lib.js"></script>
+<script src="http://erpjariomilitar.com/javascripts/essentials/api.js"></script>
