--- a/app/view/partials/head.ejs
+++ b/app/view/partials/head.ejs
@@ -1,6 +1,10 @@
 <meta charset="utf-8">
 <title>J.A Rio Militar</title>
 <meta name="viewport" content="width=device-width, user-scalable=no">
-<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+<!-- <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/elements.css">
-<link rel="stylesheet" type="text/css" href="/stylesheets/actions.css">
+<link rel="stylesheet" type="text/css" href="/stylesheets/actions.css"> -->
+
+<link rel="stylesheet" type="text/css" href="http://frameworkjariomilitar-com.umbler.net/front-end/stylesheets/main.css">
+<link rel="stylesheet" type="text/css" href="http://frameworkjariomilitar-com.umbler.net/front-end/stylesheets/elements.css">
+<link rel="stylesheet" type="text/css" href="http://frameworkjariomilitar-com.umbler.net/front-end/stylesheets/actions.css">
