--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -15,7 +15,7 @@
                 <div class="box-1">
                 	<h3>Ainda não é representante J.A Rio Militar?</h3>
                 	<h3>Cadastre-se agora para se tornar um parceiro da marca militar que mais cresce no país.</h3><br>
-                	<button onclick="window.location.href='/signup'" class="btn-explicit bold">Desejo ser representante J.A Rio Militar</button>
+                	<button onclick="window.location.href='/signup'" class="explicit-btn bold">Desejo ser representante J.A Rio Militar</button>
                 </div>
 			</div>
 		</section>
