framework boxes test

--- a/app/view/partials/head.ejs
+++ b/app/view/partials/head.ejs
@@ -2,6 +2,10 @@
 <title>J.A Rio Militar</title>
 <meta name="viewport" content="width=device-width, user-scalable=no">
 
-<link rel="stylesheet" type="text/css" href="https://jaframework.herokuapp.com/front-end/stylesheets/main.css">
+<!-- <link rel="stylesheet" type="text/css" href="https://jaframework.herokuapp.com/front-end/stylesheets/main.css">
 <link rel="stylesheet" type="text/css" href="https://jaframework.herokuapp.com/front-end/stylesheets/elements.css">
-<link rel="stylesheet" type="text/css" href="https://jaframework.herokuapp.com/front-end/stylesheets/actions.css">
+<link rel="stylesheet" type="text/css" href="https://jaframework.herokuapp.com/front-end/stylesheets/actions.css"> -->
+
+<link rel="stylesheet" type="text/css" href="http://127.0.0.1:3000/front-end/stylesheets/main.css">
+<link rel="stylesheet" type="text/css" href="http://127.0.0.1:3000/front-end/stylesheets/elements.css">
+<link rel="stylesheet" type="text/css" href="http://127.0.0.1:3000/front-end/stylesheets/actions.css">
