--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
         <% include ./partials/head %>
@@ -12,11 +13,74 @@
         <% include ./partials/nav %>
 		<section>
 			<div class="container">
-                <div class="box-1">
-                	<h3>Ainda não é representante J.A Rio Militar?</h3>
-                	<h3>Cadastre-se agora para se tornar um parceiro da marca militar que mais cresce no país.</h3><br>
-                	<button onclick="window.location.href='/signup'" class="explicit-btn bold">Desejo ser representante J.A Rio Militar</button>
+                <div class="box-2">
+            		<div class="container">
+                		<div class="box-4 box-hover"><img src="/images/general/froid.png" style="width:100%;height:100%;border-radius:100%;"></div>
+                		<div class="box-4 box-hover"></div>
+                		<div class="box-4 box-hover"></div>
+                		<div class="box-4 box-hover"></div>
+                		<div class="box-4 box-hover">
+                			<h3>Froid</h3>
+                			<h4>Artista</h4>
+                		</div>
+                		<div class="box-4 box-hover"></div>
+                		<div class="box-4 box-hover"></div>
+                		<div class="box-4 box-hover"></div>
+                		<div class="box-4 box-hover"></div>
+                		<div class="box-1-5 box-hover"></div>
+                		<!-- <div class="box-4 box-hover"></div> -->
+                	</div>
                 </div>
+                <div class="box-2">
+	                <div class="box-1 box-hover">
+                		<div class="container">
+	                		<div class="box-4 box-hover"><img src="/images/general/froid.png" style="width:30%;height:100%;border-radius:10%;"></div>
+	                		<div class="box-1-5 box-hover"></div>
+	                	</div>
+                	</div>
+                	<div class="box-1 box-hover">
+                		<div class="container">
+	                		<div class="box-4 box-hover"><img src="/images/general/froid.png" style="width:30%;height:100%;border-radius:10%;"></div>
+	                		<div class="box-1-5 box-hover"></div>
+	                	</div>
+                	</div>
+                	<div class="box-1 box-hover">
+                		<div class="container">
+	                		<div class="box-4 box-hover"><img src="/images/general/froid.png" style="width:30%;height:100%;border-radius:10%;"></div>
+	                		<div class="box-1-5 box-hover"></div>
+	                	</div>
+                	</div>
+                	<div class="box-1 box-hover">
+                		<div class="container">
+	                		<div class="box-4 box-hover"><img src="/images/general/froid.png" style="width:30%;height:100%;border-radius:10%;"></div>
+	                		<div class="box-1-5 box-hover"></div>
+	                	</div>
+                	</div>
+                </div>
+                <div class="box-1 box-hover"></div>
+
+                <div class="box-2 box-hover"></div>
+                <div class="box-2 box-hover"></div>
+
+				<div class="box-3 box-hover"></div>
+                <div class="box-3 box-hover"></div>
+                <div class="box-3 box-hover"></div>
+
+                <div class="box-4 box-hover"></div>
+                <div class="box-4 box-hover"></div>
+                <div class="box-4 box-hover"></div>
+                <div class="box-4 box-hover"></div>
+
+                <div class="box-4 box-hover"></div>
+                <div class="box-2 box-hover"></div>
+                <div class="box-4 box-hover"></div>
+
+                <div class="box-1-5 box-hover"></div>
+                <div class="box-4 box-hover"></div>
+
+                <div class="box-4 box-hover"></div>
+                <div class="box-1-5 box-hover"></div>
+
 			</div>
 		</section>
 		<div id="ajax-loader" class="ajax-loader">
