--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -13,73 +13,194 @@
         <% include ./partials/nav %>
 		<section>
 			<div class="container">
-                <div class="box-2">
+                <div class="box two margin-top-10 box-hover">
             		<div class="container">
-                		<div class="box-4 box-hover"><img src="/images/general/froid.png" style="width:100%;height:100%;border-radius:100%;"></div>
-                		<div class="box-4 box-hover"></div>
-                		<div class="box-4 box-hover"></div>
-                		<div class="box-4 box-hover"></div>
-                		<div class="box-4 box-hover">
+                		<div class="box four padding-1 margin-top-5"><img src="/images/general/froid.png" style="width:100px;height:100px;border-radius:100%;"></div>
+                		<div class="box four margin-top-5"></div>
+                		<div class="box four margin-top-5"></div>
+                		<div class="box four margin-top-5"></div>
+                		<div class="box four margin-top-down-5">
                 			<h3>Froid</h3>
                 			<h4>Artista</h4>
                 		</div>
-                		<div class="box-4 box-hover"></div>
-                		<div class="box-4 box-hover"></div>
-                		<div class="box-4 box-hover"></div>
-                		<div class="box-4 box-hover"></div>
-                		<div class="box-1-5 box-hover"></div>
-                		<!-- <div class="box-4 box-hover"></div> -->
+                		<div class="box four margin-top-down-5"></div>
+                		<div class="box four margin-top-down-5"></div>
+                		<div class="box four margin-top-down-5"></div>
                 	</div>
                 </div>
-                <div class="box-2">
-	                <div class="box-1 box-hover">
+                <div class="box two margin-top-10">
+	                <div class="box one padding-5 box-hover">
                 		<div class="container">
-	                		<div class="box-4 box-hover"><img src="/images/general/froid.png" style="width:30%;height:100%;border-radius:10%;"></div>
-	                		<div class="box-1-5 box-hover"></div>
+	                		<div class="box twelve"><img src="/images/general/froid.png" style="width:50px;height:50px;border-radius:1%;"></div>
+	                		<div class="box fifth"></div>
 	                	</div>
                 	</div>
-                	<div class="box-1 box-hover">
+                	<div class="box one margin-top-down-10 padding-5 box-hover">
                 		<div class="container">
-	                		<div class="box-4 box-hover"><img src="/images/general/froid.png" style="width:30%;height:100%;border-radius:10%;"></div>
-	                		<div class="box-1-5 box-hover"></div>
+	                		<div class="box twelve"><img src="/images/general/froid.png" style="width:50px;height:50px;border-radius:1%;"></div>
+	                		<div class="box fifth"></div>
 	                	</div>
                 	</div>
-                	<div class="box-1 box-hover">
+                	<div class="box one padding-5 box-hover">
                 		<div class="container">
-	                		<div class="box-4 box-hover"><img src="/images/general/froid.png" style="width:30%;height:100%;border-radius:10%;"></div>
-	                		<div class="box-1-5 box-hover"></div>
-	                	</div>
-                	</div>
-                	<div class="box-1 box-hover">
-                		<div class="container">
-	                		<div class="box-4 box-hover"><img src="/images/general/froid.png" style="width:30%;height:100%;border-radius:10%;"></div>
-	                		<div class="box-1-5 box-hover"></div>
+	                		<div class="box twelve box-hover"><img src="/images/general/froid.png" style="width:50px;height:50px;border-radius:1%;"></div>
+	                		<div class="box fifth"></div>
 	                	</div>
                 	</div>
                 </div>
-                <div class="box-1 box-hover"></div>
+                <!-- One -->
+                <div class="box one box-hover margin-top-10">ONE</div>
 
-                <div class="box-2 box-hover"></div>
-                <div class="box-2 box-hover"></div>
+                <!-- Two -->
+                <div class="box two box-hover margin-top-10">TWO</div>
+                <div class="box two box-hover margin-top-10"></div>
 
-				<div class="box-3 box-hover"></div>
-                <div class="box-3 box-hover"></div>
-                <div class="box-3 box-hover"></div>
+                <!-- Three -->
+                <div class="box three box-hover margin-top-10">THREE</div>
+                <div class="box three box-hover margin-top-10"></div>
+                <div class="box three box-hover margin-top-10"></div>
 
-                <div class="box-4 box-hover"></div>
-                <div class="box-4 box-hover"></div>
-                <div class="box-4 box-hover"></div>
-                <div class="box-4 box-hover"></div>
+                <!-- Four -->
+                <div class="box four box-hover margin-top-10">FOUR</div>
+                <div class="box four box-hover margin-top-10"></div>
+                <div class="box four box-hover margin-top-10"></div>
+                <div class="box four box-hover margin-top-10"></div>
 
-                <div class="box-4 box-hover"></div>
-                <div class="box-2 box-hover"></div>
-                <div class="box-4 box-hover"></div>
+                <!-- Five -->
+                <div class="box five box-hover margin-top-10">FIVE</div>
+                <div class="box five box-hover margin-top-10"></div>
+                <div class="box five box-hover margin-top-10"></div>
+                <div class="box five box-hover margin-top-10"></div>
+                <div class="box five box-hover margin-top-10"></div>
 
-                <div class="box-1-5 box-hover"></div>
-                <div class="box-4 box-hover"></div>
+                <!-- Six -->
+                <div class="box six box-hover margin-top-10">SIX</div>
+                <div class="box six box-hover margin-top-10"></div>
+                <div class="box six box-hover margin-top-10"></div>
+                <div class="box six box-hover margin-top-10"></div>
+                <div class="box six box-hover margin-top-10"></div>
+                <div class="box six box-hover margin-top-10"></div>
 
-                <div class="box-4 box-hover"></div>
-                <div class="box-1-5 box-hover"></div>
+                <!-- Seven -->
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box seven box-hover margin-top-10"></div>
+                <div class="box seven box-hover margin-top-10"></div>
+                <div class="box seven box-hover margin-top-10"></div>
+                <div class="box seven box-hover margin-top-10"></div>
+                <div class="box seven box-hover margin-top-10"></div>
+                <div class="box seven box-hover margin-top-10"></div>
+
+                <!-- Eight -->
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box eight box-hover margin-top-10"></div>
+                <div class="box eight box-hover margin-top-10"></div>
+                <div class="box eight box-hover margin-top-10"></div>
+                <div class="box eight box-hover margin-top-10"></div>
+                <div class="box eight box-hover margin-top-10"></div>
+                <div class="box eight box-hover margin-top-10"></div>
+                <div class="box eight box-hover margin-top-10"></div>
+
+                <!-- Nine -->
+                <div class="box nine box-hover margin-top-10">NINE</div>
+                <div class="box nine box-hover margin-top-10"></div>
+                <div class="box nine box-hover margin-top-10"></div>
+                <div class="box nine box-hover margin-top-10"></div>
+                <div class="box nine box-hover margin-top-10"></div>
+                <div class="box nine box-hover margin-top-10"></div>
+                <div class="box nine box-hover margin-top-10"></div>
+                <div class="box nine box-hover margin-top-10"></div>
+                <div class="box nine box-hover margin-top-10"></div>
+
+                <!-- Ten -->
+                <div class="box ten box-hover margin-top-10">TEN</div>
+                <div class="box ten box-hover margin-top-10"></div>
+                <div class="box ten box-hover margin-top-10"></div>
+                <div class="box ten box-hover margin-top-10"></div>
+                <div class="box ten box-hover margin-top-10"></div>
+                <div class="box ten box-hover margin-top-10"></div>
+                <div class="box ten box-hover margin-top-10"></div>
+                <div class="box ten box-hover margin-top-10"></div>
+                <div class="box ten box-hover margin-top-10"></div>
+                <div class="box ten box-hover margin-top-10"></div>
+
+                 <!-- Eleven -->
+                <div class="box eleven box-hover margin-top-10">ELEVEN</div>
+                <div class="box eleven box-hover margin-top-10"></div>
+                <div class="box eleven box-hover margin-top-10"></div>
+                <div class="box eleven box-hover margin-top-10"></div>
+                <div class="box eleven box-hover margin-top-10"></div>
+                <div class="box eleven box-hover margin-top-10"></div>
+                <div class="box eleven box-hover margin-top-10"></div>
+                <div class="box eleven box-hover margin-top-10"></div>
+                <div class="box eleven box-hover margin-top-10"></div>
+                <div class="box eleven box-hover margin-top-10"></div>
+                <div class="box eleven box-hover margin-top-10"></div>
+
+                <!-- Twelve -->
+                <div class="box twelve box-hover margin-top-10">TWELVE</div>
+                <div class="box twelve box-hover margin-top-10"></div>
+                <div class="box twelve box-hover margin-top-10"></div>
+                <div class="box twelve box-hover margin-top-10"></div>
+                <div class="box twelve box-hover margin-top-10"></div>
+                <div class="box twelve box-hover margin-top-10"></div>
+                <div class="box twelve box-hover margin-top-10"></div>
+                <div class="box twelve box-hover margin-top-10"></div>
+                <div class="box twelve box-hover margin-top-10"></div>
+                <div class="box twelve box-hover margin-top-10"></div>
+                <div class="box twelve box-hover margin-top-10"></div>
+                <div class="box twelve box-hover margin-top-10"></div>
+
+                <div class="box one box-hover margin-top-10">-------</div>
+
+                <div class="box three box-hover margin-top-10">THREE</div>
+                <div class="box two-thirds box-hover margin-top-10">TWO-THIRDS</div>
+
+                <div class="box four box-hover margin-top-10">FOUR</div>
+                <div class="box four box-hover margin-top-10">FOUR</div>
+                <div class="box two box-hover margin-top-10">TWO</div>
+
+                <div class="box four box-hover margin-top-10">FOUR</div>
+                <div class="box three-fourths box-hover margin-top-10">THREE-FOURTHS</div>
+
+                <div class="box five box-hover margin-top-10">FIVE</div>
+                <div class="box five box-hover margin-top-10">FIVE</div>
+                <div class="box five box-hover margin-top-10">FIVE</div>
+                <div class="box two-fifths box-hover margin-top-10">TWO-FIFTHS</div>
+
+                <div class="box five box-hover margin-top-10">FIVE</div>
+                <div class="box five box-hover margin-top-10">FIVE</div>
+                <div class="box three-fifths box-hover margin-top-10">THREE-FIFTHS</div>
+
+                <div class="box five box-hover margin-top-10">FIVE</div>
+                <div class="box four-fifths box-hover margin-top-10">FOUR-FIFTHS</div>
+
+                <div class="box six box-hover margin-top-10">SIX</div>
+                <div class="box six box-hover margin-top-10">SIX</div>
+                <div class="box six box-hover margin-top-10">SIX</div>
+                <div class="box six box-hover margin-top-10">SIX</div>
+                <div class="box three box-hover margin-top-10">THREE</div>
+
+                <div class="box six box-hover margin-top-10">SIX</div>
+                <div class="box six box-hover margin-top-10">SIX</div>
+                <div class="box six box-hover margin-top-10">SIX</div>
+                <div class="box two box-hover margin-top-10">TWO</div>
+
+                <div class="box six box-hover margin-top-10">SIX</div>
+                <div class="box six box-hover margin-top-10">SIX</div>
+                <div class="box two-thirds box-hover margin-top-10">TWO-THIRDS</div>
+
+                <div class="box six box-hover margin-top-10">SIX</div>
+                <div class="box five-sixths box-hover margin-top-10">FIVE-SIXTHS</div>
+
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box six-sevenths box-hover margin-top-10">SIX-SEVENTHS</div>
+
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box five-sevenths box-hover margin-top-10">FIVE-SEVENTHS</div>
+
+
+
 
 			</div>
 		</section>
