--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -193,15 +193,50 @@
                 <div class="box five-sixths box-hover margin-top-10">FIVE-SIXTHS</div>
 
                 <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box six-sevenths box-hover margin-top-10">SIX-SEVENTHS</div>
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box two-sevenths box-hover margin-top-10">TWO-SEVENTHS</div>
+
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box three-sevenths box-hover margin-top-10">THREE-SEVENTHS</div>
+
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box four-sevenths box-hover margin-top-10">FOUR-SEVENTHS</div>
 
                 <div class="box seven box-hover margin-top-10">SEVEN</div>
                 <div class="box seven box-hover margin-top-10">SEVEN</div>
                 <div class="box five-sevenths box-hover margin-top-10">FIVE-SEVENTHS</div>
 
+                <div class="box seven box-hover margin-top-10">SEVEN</div>
+                <div class="box six-sevenths box-hover margin-top-10">SIX-SEVENTHS</div>
 
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box four box-hover margin-top-10">FOUR</div>
 
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box two box-hover margin-top-10">TWO</div>
 
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box three-fourths box-hover margin-top-10">THREE-FOURTHS</div>
+
+                <div class="box eight box-hover margin-top-10">EIGHT</div>
+                <div class="box seven-eighths box-hover margin-top-10">SEVEN-EIGHTHS</div>
 			</div>
 		</section>
 		<div id="ajax-loader" class="ajax-loader">
