--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -13,230 +13,73 @@
         <% include ./partials/nav %>
 		<section>
 			<div class="container">
-                <div class="box two margin-top-10 box-hover">
-            		<div class="container">
-                		<div class="box four padding-1 margin-top-5"><img src="/images/general/froid.png" style="width:100px;height:100px;border-radius:100%;"></div>
-                		<div class="box four margin-top-5"></div>
-                		<div class="box four margin-top-5"></div>
-                		<div class="box four margin-top-5"></div>
-                		<div class="box four margin-top-down-5">
-                			<h3>Froid</h3>
-                			<h4>Artista</h4>
-                		</div>
-                		<div class="box four margin-top-down-5"></div>
-                		<div class="box four margin-top-down-5"></div>
-                		<div class="box four margin-top-down-5"></div>
-                	</div>
+                <!-- <div class="box one ground box-border-hover margin-top-15 padding-5">
+                    <h3 class="title-soft underline center">Buscar Produtos</h3>
+                    <form id="product-filter-form" class="box one center">
+                        <input type="hidden" name="location" value="product-manage" autocomplete="off">
+                        <input type="text" name="name" class="btn-generic-big" placeholder="Nome" autocomplete="off"><br>
+                        <input type="number" name="code" class="btn-generic-small" placeholder="Cód" autocomplete="off">
+                        <select name="color" class="btn-generic-small" autocomplete="off">
+                            <option value="">Cor</option>
+                            <% for(i in productColors){ %>
+                                <option value="<%= productColors[i].shortcut %>"><%= productColors[i].name %></option>
+                            <% } %>
+                        </select><br>
+                        <select name="brand" class="btn-generic-big" autocomplete="off">
+                            <option value="">Marca do Produto</option>
+                            <option value="Sem marca">Sem marca</option>
+                            <option value="J.A Rio Militar">J.A Rio Militar</option>
+                        </select><br>
+                        <input type="submit" name="submit" class="btn-submit" value="Filtrar">
+                    </form>
+
+                    <div id="product-manage-filter-box" class="box-1" style="display:none">
+                        <table class="tbl-info width-fill" id="product-manage-filter-table"></table>
+                        <br>
+                        <% include ./partials/carousel %>
+                    </div>
+                </div> -->
+
+                
+               <!--  <div class="box two ground margin-top-15 box-border">
+                    <div class="container h-center padding-5">
+                        <div class="mobile-box two padding-5 box-hover">
+                            <p class="bold padding-5">Inputs</p>
+                                <p>- Valor do produto</p>
+                                <p>- quantidade de dias</p>
+                                <p>- taxa fixa</p>
+                                <p>- taxa acrescida</p>
+                        </div>
+
+                        <div class="mobile-box two padding-5 box-hover">
+                            <p class="bold padding-5">Outputs</p>
+                                <p>- valor total</p>
+                                <p>- valor das parcelas</p>
+                                <p>- valor acrescido</p>
+                        </div>
+                    </div>
+                </div> -->
+
+                <div class="box two ground margin-top-15 padding-10">
+                    <h3 class="title-soft underline center">Calcular juros</h3>
+                    <form id="interest-calculate-form" class="box one padding-10">
+                        <div class="container">
+                            <input type="number" class="btn five price box-hover padding-5" name="value" step="0.01" value="" placeholder="Valor" onfocus="if(this.value < 0.01){this.value=''}" onblur="if(this.value < 0.01){this.value=''}"/>
+                            <select class="btn five bold box-hover padding-5" name="time">
+                                <option value="30">30 dias</option>
+                                <option value="60">60 dias</option>
+                                <option value="90">90 dias</option>
+                            </select>
+                            <input type="number" class="btn five bold box-hover padding-5" name="fixed-interest-rate" step="0.01" value="" placeholder="Taxa fixa" onfocus="if(this.value < 0.01){this.value=''}" onblur="if(this.value < 0.01){this.value=''}"/>
+                            <input type="number" class="btn five bold box-hover padding-5" name="floating-interest-rate" step="0.01" value="" placeholder="Taxa variável" onfocus="if(this.value < 0.01){this.value=''}" onblur="if(this.value < 0.01){this.value=''}"/>
+                            <input type="submit" name="submit" class="btn five bold box-hover padding-5 impact submit" value="CALCULAR">
+                        </div>
+                    </form>
                 </div>
-                <div class="box two margin-top-10">
-	                <div class="box one padding-5 box-hover">
-                		<div class="container">
-	                		<div class="box twelve"><img src="/images/general/froid.png" style="width:50px;height:50px;border-radius:1%;"></div>
-	                		<div class="box fifth"></div>
-	                	</div>
-                	</div>
-                	<div class="box one margin-top-down-10 padding-5 box-hover">
-                		<div class="container">
-	                		<div class="box twelve"><img src="/images/general/froid.png" style="width:50px;height:50px;border-radius:1%;"></div>
-	                		<div class="box fifth"></div>
-	                	</div>
-                	</div>
-                	<div class="box one padding-5 box-hover">
-                		<div class="container">
-	                		<div class="box twelve box-hover"><img src="/images/general/froid.png" style="width:50px;height:50px;border-radius:1%;"></div>
-	                		<div class="box fifth"></div>
-	                	</div>
-                	</div>
+
+                <div class="box two ground margin-top-15 padding-10">
+                    
                 </div>
-                <!-- One -->
-                <div class="box one box-hover margin-top-10">ONE</div>
-
-                <!-- Two -->
-                <div class="box two box-hover margin-top-10">TWO</div>
-                <div class="box two box-hover margin-top-10"></div>
-
-                <!-- Three -->
-                <div class="box three box-hover margin-top-10">THREE</div>
-                <div class="box three box-hover margin-top-10"></div>
-                <div class="box three box-hover margin-top-10"></div>
-
-                <!-- Four -->
-                <div class="box four box-hover margin-top-10">FOUR</div>
-                <div class="box four box-hover margin-top-10"></div>
-                <div class="box four box-hover margin-top-10"></div>
-                <div class="box four box-hover margin-top-10"></div>
-
-                <!-- Five -->
-                <div class="box five box-hover margin-top-10">FIVE</div>
-                <div class="box five box-hover margin-top-10"></div>
-                <div class="box five box-hover margin-top-10"></div>
-                <div class="box five box-hover margin-top-10"></div>
-                <div class="box five box-hover margin-top-10"></div>
-
-                <!-- Six -->
-                <div class="box six box-hover margin-top-10">SIX</div>
-                <div class="box six box-hover margin-top-10"></div>
-                <div class="box six box-hover margin-top-10"></div>
-                <div class="box six box-hover margin-top-10"></div>
-                <div class="box six box-hover margin-top-10"></div>
-                <div class="box six box-hover margin-top-10"></div>
-
-                <!-- Seven -->
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box seven box-hover margin-top-10"></div>
-                <div class="box seven box-hover margin-top-10"></div>
-                <div class="box seven box-hover margin-top-10"></div>
-                <div class="box seven box-hover margin-top-10"></div>
-                <div class="box seven box-hover margin-top-10"></div>
-                <div class="box seven box-hover margin-top-10"></div>
-
-                <!-- Eight -->
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box eight box-hover margin-top-10"></div>
-                <div class="box eight box-hover margin-top-10"></div>
-                <div class="box eight box-hover margin-top-10"></div>
-                <div class="box eight box-hover margin-top-10"></div>
-                <div class="box eight box-hover margin-top-10"></div>
-                <div class="box eight box-hover margin-top-10"></div>
-                <div class="box eight box-hover margin-top-10"></div>
-
-                <!-- Nine -->
-                <div class="box nine box-hover margin-top-10">NINE</div>
-                <div class="box nine box-hover margin-top-10"></div>
-                <div class="box nine box-hover margin-top-10"></div>
-                <div class="box nine box-hover margin-top-10"></div>
-                <div class="box nine box-hover margin-top-10"></div>
-                <div class="box nine box-hover margin-top-10"></div>
-                <div class="box nine box-hover margin-top-10"></div>
-                <div class="box nine box-hover margin-top-10"></div>
-                <div class="box nine box-hover margin-top-10"></div>
-
-                <!-- Ten -->
-                <div class="box ten box-hover margin-top-10">TEN</div>
-                <div class="box ten box-hover margin-top-10"></div>
-                <div class="box ten box-hover margin-top-10"></div>
-                <div class="box ten box-hover margin-top-10"></div>
-                <div class="box ten box-hover margin-top-10"></div>
-                <div class="box ten box-hover margin-top-10"></div>
-                <div class="box ten box-hover margin-top-10"></div>
-                <div class="box ten box-hover margin-top-10"></div>
-                <div class="box ten box-hover margin-top-10"></div>
-                <div class="box ten box-hover margin-top-10"></div>
-
-                 <!-- Eleven -->
-                <div class="box eleven box-hover margin-top-10">ELEVEN</div>
-                <div class="box eleven box-hover margin-top-10"></div>
-                <div class="box eleven box-hover margin-top-10"></div>
-                <div class="box eleven box-hover margin-top-10"></div>
-                <div class="box eleven box-hover margin-top-10"></div>
-                <div class="box eleven box-hover margin-top-10"></div>
-                <div class="box eleven box-hover margin-top-10"></div>
-                <div class="box eleven box-hover margin-top-10"></div>
-                <div class="box eleven box-hover margin-top-10"></div>
-                <div class="box eleven box-hover margin-top-10"></div>
-                <div class="box eleven box-hover margin-top-10"></div>
-
-                <!-- Twelve -->
-                <div class="box twelve box-hover margin-top-10">TWELVE</div>
-                <div class="box twelve box-hover margin-top-10"></div>
-                <div class="box twelve box-hover margin-top-10"></div>
-                <div class="box twelve box-hover margin-top-10"></div>
-                <div class="box twelve box-hover margin-top-10"></div>
-                <div class="box twelve box-hover margin-top-10"></div>
-                <div class="box twelve box-hover margin-top-10"></div>
-                <div class="box twelve box-hover margin-top-10"></div>
-                <div class="box twelve box-hover margin-top-10"></div>
-                <div class="box twelve box-hover margin-top-10"></div>
-                <div class="box twelve box-hover margin-top-10"></div>
-                <div class="box twelve box-hover margin-top-10"></div>
-
-                <div class="box one box-hover margin-top-10">-------</div>
-
-                <div class="box three box-hover margin-top-10">THREE</div>
-                <div class="box two-thirds box-hover margin-top-10">TWO-THIRDS</div>
-
-                <div class="box four box-hover margin-top-10">FOUR</div>
-                <div class="box four box-hover margin-top-10">FOUR</div>
-                <div class="box two box-hover margin-top-10">TWO</div>
-
-                <div class="box four box-hover margin-top-10">FOUR</div>
-                <div class="box three-fourths box-hover margin-top-10">THREE-FOURTHS</div>
-
-                <div class="box five box-hover margin-top-10">FIVE</div>
-                <div class="box five box-hover margin-top-10">FIVE</div>
-                <div class="box five box-hover margin-top-10">FIVE</div>
-                <div class="box two-fifths box-hover margin-top-10">TWO-FIFTHS</div>
-
-                <div class="box five box-hover margin-top-10">FIVE</div>
-                <div class="box five box-hover margin-top-10">FIVE</div>
-                <div class="box three-fifths box-hover margin-top-10">THREE-FIFTHS</div>
-
-                <div class="box five box-hover margin-top-10">FIVE</div>
-                <div class="box four-fifths box-hover margin-top-10">FOUR-FIFTHS</div>
-
-                <div class="box six box-hover margin-top-10">SIX</div>
-                <div class="box six box-hover margin-top-10">SIX</div>
-                <div class="box six box-hover margin-top-10">SIX</div>
-                <div class="box six box-hover margin-top-10">SIX</div>
-                <div class="box three box-hover margin-top-10">THREE</div>
-
-                <div class="box six box-hover margin-top-10">SIX</div>
-                <div class="box six box-hover margin-top-10">SIX</div>
-                <div class="box six box-hover margin-top-10">SIX</div>
-                <div class="box two box-hover margin-top-10">TWO</div>
-
-                <div class="box six box-hover margin-top-10">SIX</div>
-                <div class="box six box-hover margin-top-10">SIX</div>
-                <div class="box two-thirds box-hover margin-top-10">TWO-THIRDS</div>
-
-                <div class="box six box-hover margin-top-10">SIX</div>
-                <div class="box five-sixths box-hover margin-top-10">FIVE-SIXTHS</div>
-
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box two-sevenths box-hover margin-top-10">TWO-SEVENTHS</div>
-
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box three-sevenths box-hover margin-top-10">THREE-SEVENTHS</div>
-
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box four-sevenths box-hover margin-top-10">FOUR-SEVENTHS</div>
-
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box five-sevenths box-hover margin-top-10">FIVE-SEVENTHS</div>
-
-                <div class="box seven box-hover margin-top-10">SEVEN</div>
-                <div class="box six-sevenths box-hover margin-top-10">SIX-SEVENTHS</div>
-
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box four box-hover margin-top-10">FOUR</div>
-
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box two box-hover margin-top-10">TWO</div>
-
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box three-fourths box-hover margin-top-10">THREE-FOURTHS</div>
-
-                <div class="box eight box-hover margin-top-10">EIGHT</div>
-                <div class="box seven-eighths box-hover margin-top-10">SEVEN-EIGHTHS</div>
 			</div>
 		</section>
 		<div id="ajax-loader" class="ajax-loader">
@@ -246,6 +89,21 @@
 	<footer>
         <% include ./partials/footer %>
         <% include ./product/partial %>
+        <script>
+            //valor / (time/
+            document.getElementById("interest-calculate-form").addEventListener("submit", (e) => {
+                e.preventDefault();
+                e.stopPropagation();
+
+                let form = {
+                    value: document.getElementById("interest-calculate-form").elements.namedItem("value").value,
+                    time: document.getElementById("interest-calculate-form").elements.namedItem("time").value,
+                    fixed_interest_rate: document.getElementById("interest-calculate-form").elements.namedItem("fixed-interest-rate").value,
+                    floating_interest_rate: document.getElementById("interest-calculate-form").elements.namedItem("floating-interest-rate").value
+                };
+
+                console.log(form);
+            });
         </script>
 	</footer>
 </html>
